# agn201_Digital_Twin

./: .gitignore  LICENSE  NOTICE.txt  README.md
AGN-MR/: .gitattributes  .gitignore  README.md
AGN-MR/Assets/: WSATestCertificate.pfx
AGN-MR/Assets/AppRemoting/: AppRemoting.cs
AGN-MR/Assets/AssetsStore/Garage_props/Assets/Materials/: Furniture_garage 1.mat  Furniture_garage.mat  Furniture_garage_Height.mat  Furniture_garage_Roughness.mat  (+1 more)
AGN-MR/Assets/AssetsStore/Garage_props/Demo/: demo.unity
AGN-MR/Assets/Materials/: Alert.mat  AllGood.mat  Capture.mat  ColorByValue.mat  Grid.mat  M_Metal 1.mat  M_Metal 2.mat  M_Metal.mat  Opaque.mat  Rods.mat  Transparent 1.mat  Transparent.mat  Walls.mat  Warning.mat
AGN-MR/Assets/Materials/Materials/: cinder_block.mat  concrete-block-wall-concrete-block-wall-texture-background-seamless-178797839.mat  floor.mat
AGN-MR/Assets/MixedRealityToolkit.Generated/CustomProfiles/: Industrial Metaverse 1.asset  Industrial Metaverse.asset  New MixedRealityHandTrackingProfile.asset  New MixedRealityInputSystemProfile.asset  Template-MR-Profile.asset
AGN-MR/Assets/Model/: MB_Base.mat  M_Console.mat  pressureCooker.fbx
AGN-MR/Assets/Models/: ISU Reactor.fbx  SM_MERGED_StaticMeshActor_12.FBX  Simple_Pipe.fbx
AGN-MR/Assets/Prefabs/: ActualPredictedItem.prefab  AppRemoting.prefab  Armature.prefab  Control_Panel_001 Variant.prefab  CustomItem.prefab  DataPanel.prefab  Menu.prefab  Particle System.prefab  Reactor Room.prefab  barrel_open Variant.prefab  bench Variant.prefab  rack Variant.prefab  stairs (2) Variant.prefab  table Variant.prefab
AGN-MR/Assets/Resources/Data/: Sensor1_Inlet 1.csv
AGN-MR/Assets/Scenes/: AGN Digital Twin.unity  SampleScene.unity
AGN-MR/Assets/Scripts/: Facility.controller  GameObject.controller  Reactor Rotate.anim  Rotate.anim
AGN-MR/Assets/Scripts/Data/: Classes.cs  DataManager.cs  UpdateActualPredicted.cs
AGN-MR/Assets/Scripts/DeepLynx/: DeepLynxClasses.cs  DeepLynxLoader.cs  DeepLynxLoaderC.cs  DeepLynxQueries.cs  IDeepLynxBaseQuery.cs
AGN-MR/Assets/Scripts/Interactions/: ControlRods.cs  MultiChildColorChange.cs  ParticleGraph.cs  ParticleGraph1.cs  ParticleGraphCSV.cs  ResetPanelPosition.cs  TimeSeriesLineGraph.cs  ToggleActive.cs  ToggleMenuItems.cs  ToggleTimeseriesGraph.cs
AGN-MR/Assets/StreamingAssets/: config.yaml  isu_db_1.db  isu_filtered.db  isu_predictions.db
AGN-MR/Assets/XR/: XRGeneralSettings.asset
AGN-MR/Assets/XR/Settings/: OpenXR Package Settings.asset
AGN-MR/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
AGN-MR/UserSettings/: EditorUserSettings.asset  MixedRealityOpenXRRemotingSettings.asset
AGN-MR/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
JesterPlugin/: .gitignore  Cargo.toml
JesterPlugin/src/: errors.rs  lib.rs  tests.rs
MachineLearning/: .dockerignore  Cargo.toml  Dockerfile  README.md  supervisord.conf
MachineLearning/src/: data_loader.rs  errors.rs  main.rs  notebook.rs
OperatorUI/: .config.yml  .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json
OperatorUI/public/: svelte-dark.min.css
OperatorUI/src/: App.svelte  main.ts  styles.scss
OperatorUI/src-tauri/: Cargo.toml  tauri.conf.json
OperatorUI/src-tauri/src/: deep_lynx.rs  deeplynx_loader.rs  errors.rs  main.rs
OperatorUI/src/components/: AlertBanner.svelte  AppBar.svelte  ContentCard.svelte  PlotlyGraph.svelte
OperatorUI/src/store/: index.ts
(+5 files in other folders)
