[package]
name = "jester-isu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jester_core = { git = "https://github.com/idaholab/Jester.git"}
tokio = { version = "1", features = ["full", "io-util", "fs"] }
thiserror = "1.0.38"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
futures = "0.3.26"
log = {version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
adler = "1.0.2"
anyhow = "1.0.69"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
csv = "1.2.0"
chrono = "0.4.23"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
