[package]
name = "machine_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "0.7.1", features = ["bundled", "chrono"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.94"
thiserror = "1.0.38"
anyhow = "1.0.69"
chrono = "0.4.24"
ureq = { version = "2.6.2", features = ["json"] }
jwt = "0.16.0"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_debug"] }
fs2 = "0.4.3"
new_mime_guess = "4.0.1"
multipart = "0.18.0"
fern = "0.6.1"
clap = { version = "4.0.17", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full", "macros"]}

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]