[package]
name = "agn201-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
duckdb = { version = "0.7.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.94"
thiserror = "1.0.38"
anyhow = "1.0.69"
chrono = "0.4.24"
ureq = { version = "2.6.2", features = ["json"] }
jwt = "0.16.0"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_debug"] }
fs2 = "0.4.3"
new_mime_guess = "4.0.1"
multipart = "0.18.0"
fern = "0.6.1"
indexmap = {version = "1.9.3", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
